syntax = "proto3";

message ChallengeSample {
    uint32 chunk_index = 1;
    uint64 offset_in_chunk = 2;
    uint32 sample_len = 3;
}

message ChallengeDesc {
    bytes contract_id = 1;
    bytes contract_state = 2;
    repeated ChallengeSample samples = 3;
    optional uint32 challenge_type = 4;
}


message ProofDesc {
    bytes challenge = 1;
    bytes proof = 2;
}
